--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.14.1",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
