--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,72 @@
 {
-    "CodeGPT.apiKey": "CodeGPT Plus Beta"
+    "editor.minimap.enabled": false,
+    "[css]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "tabnine.experimentalAutoImports": true,
+    "files.autoSave": "afterDelay",
+    "[javascriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "explorer.fileNesting.patterns": {
+        "*.ts": "${capture}.js",
+        "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
+        "*.jsx": "${capture}.js",
+        "*.tsx": "${capture}.ts",
+        "tsconfig.json": "tsconfig.*.json",
+        "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
+        "*.sqlite": "${capture}.${extname}-*",
+        "*.db": "${capture}.${extname}-*",
+        "*.sqlite3": "${capture}.${extname}-*",
+        "*.db3": "${capture}.${extname}-*",
+        "*.sdb": "${capture}.${extname}-*",
+        "*.s3db": "${capture}.${extname}-*"
+    },
+    "explorer.confirmDelete": false,
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "git.autofetch": true,
+    "workbench.iconTheme": "icons",
+    "workbench.colorTheme": "Monokai",
+    "editor.wordWrap": "on",
+    "github.copilot.nextEditSuggestions.enabled": false,
+    "mcp": {
+        "inputs": [],
+        "servers": {
+            // Use Python instead of NPX for time server
+            "time": {
+                "command": "python",
+                "args": [
+                    "-m",
+                    "mcp_server_time",
+                    "--local-timezone=America/Bogota"
+                ],
+                "env": {}
+            },
+            
+            // Keep other servers as NPX (if they exist)
+            "filesystem": {
+                "command": "npx",
+                "args": [
+                    "@modelcontextprotocol/server-filesystem",
+                    "${workspaceFolder}"
+                ],
+                "env": {}
+            },
+            
+            "github": {
+                "command": "npx",
+                "args": [
+                    "@modelcontextprotocol/server-github"
+                ],
+                "env": {
+                    "GITHUB_PERSONAL_ACCESS_TOKEN": "${env:GITHUB_TOKEN}"
+                }
+            }
+        }
+    }
 }
