--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/three": "^0.179.0",
     "axios": "^1.7.7",
     "gsap": "^3.13.0",
     "react": "^18.3.1",
@@ -19,6 +20,7 @@
     "react-spinners": "^0.17.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "three": "^0.179.1",
     "typescript": "^4.9.5",
     "web-vitals": "^5.1.0"
   },
