--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
+.md
+
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
@@ -311,3 +313,5 @@ tmp/
 .sh
 .bat
 scripts
+package-lock.json
+package.json
