--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/three": "^0.179.0",
     "axios": "^1.7.7",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.7.3",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
